--- a/ansible/roles/tablesnap-install/tasks/main.yml
+++ b/ansible/roles/tablesnap-install/tasks/main.yml
@@ -14,8 +14,8 @@
 - name: create virtual env && install tablesnap
   command: "{{ item }}"
   with_items:
-    - "virtualenv -p python2 /opt/cassandra/venv/python2"
-    - "/opt/cassandra/venv/python2/bin/pip install tablesnap"
+    - "virtualenv -p python2 {{ tools_install_folder }}/venv/python2"
+    - "{{ tools_install_folder }}/venv/python2/bin/pip install tablesnap"
 
 - name: install systemd tablesnap.service unit
   template:
