cassandra-tools - ansible, config paths

--- a/ansible/roles/cassandra-exporter-install/tasks/exporter-as-jvm-agent.yml
+++ b/ansible/roles/cassandra-exporter-install/tasks/exporter-as-jvm-agent.yml
@@ -9,7 +9,7 @@
 
 - name: adding a new cassandra javaagent
   lineinfile:
-    name: "{{ tools_install_folder }}/ddac/conf/cassandra-env.sh"
+    name: "{{ cassandra_env_exec }}"
     line: "{{ item.line }}"
   with_items:
     - { line: 'JVM_OPTS="$JVM_OPTS -javaagent:$CASSANDRA_HOME/lib/cassandra-exporter-agent-0.9.10.jar"' }
