--- a/ansible/playbooks/cassandra-tools-install.yml
+++ b/ansible/playbooks/cassandra-tools-install.yml
@@ -22,7 +22,7 @@
   run_once: true
   tasks:
     - name: nodetool describecluster
-      command: "{{ nodetool_exec }} -u {{ cassandra_shell_user }} -pw {{ cassandra_shell_password }} describecluster"
+      command: "{{ nodetool_exec }} -u {{ cassandra_shell_user }} -pw {{ cassandra_shell_password }} -h {{ private_ip }} describecluster"
       register: nodetool_output
 
     - set_fact: cassandra_cluster_name={{ nodetool_output.stdout | regex_search("Name:\s(.*)\s", '\\1', multiline=True, ignorecase=False) }} cacheable=yes
