cassandra_restart_command

--- a/ansible/envs/_local/group_vars/all.yml
+++ b/ansible/envs/_local/group_vars/all.yml
@@ -10,6 +10,8 @@ cassandra_env_exec: /opt/cassandra/ddac/conf/cassandra-env.sh
 tools_install_folder: /opt/cassandra
 cassandra_install_lib_folder: /opt/cassandra/ddac/lib
 
+cassandra_restart_command: systemctl restart cassandra
+
 install_tablesnap: False
 install_cassandra_exporter: False
 install_filebeat: False
