--- a/ansible/playbooks/cassandra-tools-install.yml
+++ b/ansible/playbooks/cassandra-tools-install.yml
@@ -12,7 +12,7 @@
     - role: enable-jmx
       when: enable_jmx | default(False)
     - role: cassandra-medusa-install
-      when: enable_medusa | default(False)
+      when: install_medusa | default(False)
 
 ###
 ### GENERATE DOCKER ARTIFACTS, GATHER CLUSTER INFO
