--- a/ansible/roles/cassandra-medusa-install/tasks/main.yml
+++ b/ansible/roles/cassandra-medusa-install/tasks/main.yml
@@ -24,3 +24,23 @@
     - "{{ tools_install_folder }}/venv/python3-cassandra-medusa/bin/pip3 install cassandra-medusa[S3]"
   tags: ["medusa"]
 
+- name: create /etc/medusa folder
+  file:
+    path: /etc/medusa
+    state: directory
+  tags: ["medusa"]
+
+- name: create /etc/medusa/medusa.ini file
+  template:
+    src: "medusa.ini"
+    dest: "/etc/medusa/medusa.ini"
+  tags: ["medusa"]
+
+- name: create AWS credentials file
+  copy:
+    dest: "{{ medusa_aws_credentials_file }}"
+    content: |
+      [default]
+      aws_access_key_id = {{ aws_access_key_id }}
+      aws_secret_access_key = {{ aws_secret_access_key }}
+  tags: ["medusa"]
