--- a/ansible/envs/_local/group_vars/all.yml
+++ b/ansible/envs/_local/group_vars/all.yml
@@ -18,6 +18,14 @@ cassandra_start_command: systemctl start cassandra
 medusa_aws_credentials_file: /opt/cassandra/.aws/credentials
 medusa_aws_backup_cluster_prefix: cluster-a
 medusa_aws_backup_bucket_name: ion-cassandra-medusa-test
+tablesnap_aws_backup_bucket_name: ion-cassandra-tablesnap-test
+
+### PLACEHOLDERS - pass these 2 variable from command line with "-e" when ansible-playbook is invoked
+### used by cassandra-medusa and tablesnap
+aws_access_key_id: SOME_AWS_ACCESS_KEY
+aws_secret_access_key: SOME_AWS_SECRET_ACCESS_KEY
+###
+
 
 install_tablesnap: False
 install_cassandra_exporter: False
