--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -4,3 +4,4 @@ roles_path = ./roles
 ### REPLACE OR REMOVE AND USE "--user USER --private-key PRIVATE_KEY_PATH" WHEN EXECUTING THE PLAYBOOK
 remote_user = user
 library = ./library
+log_path=./ansible.log
