--- a/ansible/playbooks/group_vars/all.yml
+++ b/ansible/playbooks/group_vars/all.yml
@@ -5,3 +5,10 @@ node_exporter_url: https://github.com/prometheus/node_exporter/releases/download
 node_exporter_checksum: "sha256:b2503fd932f85f4e5baf161268854bf5d22001869b84f00fd2d1f57b51b72424"
 node_exporter_arch_file_pattern: "node_exporter*.tar.gz"
 node_exporter_unarch_folder_pattern: "node_exporter*"
+
+datastax_mcac_url: https://github.com/datastax/metric-collector-for-apache-cassandra/releases/download/v0.1.10/datastax-mcac-agent-0.1.10.zip
+datastax_mcac_file_name: datastax-mcac-agent-0.1.10
+datastax_mcac_file_ext: .zip
+datastax_mcac_grafana_dashboards: https://github.com/datastax/metric-collector-for-apache-cassandra/releases/download/v0.1.10/datastax-mcac-dashboards-0.1.10.zip
+datastax_mcac_grafana_dashboards_file_name: datastax-mcac-dashboards-0.1.10
+datastax_mcac_grafana_dashboards_file_ext: .zip
