run table analyzer on all nodes; extract out what we need from environments.yaml

--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,8 @@ venv.bak/
 **/tarball-archive/example-logs.tar.gz
 **/logs-for-client/*
 !**/logs-for-client/.placeholder
+
+# TableAnalyzer (and collect_logs.py by way of TableAnalyzer) both create data dirs when ran. don't commit those
+**/data
+# TableAnalyzer (and collect_logs.py by way of TableAnalyzer) both have users create a file at config/environments.yml. We want to commit the template, not this file though
+**/config/environments.yml
