add test config files

--- a/.gitignore
+++ b/.gitignore
@@ -114,4 +114,4 @@ venv.bak/
 **/data
 # TableAnalyzer (and collect_logs.py by way of TableAnalyzer) both have users create a file at config/environments.yml. We want to commit the template, not this file though
 **/config/environments.yaml
-**/config/environments-settings.yaml
+**/config/settings.yaml
