change target apt state to present instead of installed

--- a/src/ansible/ansible.cfg.example
+++ b/src/ansible/ansible.cfg.example
@@ -2,7 +2,7 @@
 host_key_checking = False
 roles_path = ./src/ansible/roles
 
-### REPLACE WITH OR REMOVE AND USE "--user <remote-user-username> --private-key PRIVATE_KEY_PATH" WHEN EXECUTING THE PLAYBOOK
+### REPLACE WITH REMOTE USERNAME
 remote_user = <remote-user-username>
 library = ./src/ansible/library
 log_path=./src/ansible/ansible.log
