--- a/src/ansible/roles/tablesnap-install/tasks/main.yml
+++ b/src/ansible/roles/tablesnap-install/tasks/main.yml
@@ -8,7 +8,7 @@
 - name: install python2-pip
   yum:
     name: "{{ item }}"
-    state: installed
+    state: present
   with_items:
     - "python2-pip"
 
