make filebeat installation ubuntu friendly

--- a/src/ansible/roles/filebeat/tasks/main.yml
+++ b/src/ansible/roles/filebeat/tasks/main.yml
@@ -1,12 +1,34 @@
-- name: install elastic yum repo key
+- name: install elastic yum repo key (yum)
   command: "rpm --import https://packages.elastic.co/GPG-KEY-elasticsearch"
   tags: ["filebeat"]
+  when: ansible_os_family == "RedHat"
 
-- name: install elastic repo
+
+- name: install elastic repo (yum)
   template:
     src: "elastic.repo"
     dest: "/etc/yum.repos.d"
   tags: ["filebeat"]
+
+
+- name: download and install public signing repo key (apt)
+  command: "wget -qO - https://artifacts.elastic.co/GPG-KEY-elasticsearch | sudo apt-key add -
+"
+  tags: ["filebeat"]
+  when: ansible_os_family == "Debian"
+
+- name: save elastic repo definition key (apt)
+  command: "wget -qO - https://artifacts.elastic.co/GPG-KEY-elasticsearch | sudo apt-key add -
+"
+  tags: ["filebeat"]
+  when: ansible_os_family == "Debian"
+
+- name: install apt-transport-https (apt)
+  yum:
+    name: "apt-transport-https"
+    state: present
+  tags: ["filebeat"]
+  when: ansible_os_family == "Debian"
 
 - name: install filebeat
   yum:
