--- a/src/ansible/roles/filebeat/tasks/main.yml
+++ b/src/ansible/roles/filebeat/tasks/main.yml
@@ -9,6 +9,7 @@
     src: "elastic.repo"
     dest: "/etc/yum.repos.d"
   tags: ["filebeat"]
+  when: ansible_os_family == "RedHat"
 
 
 - name: download and install public signing repo key (apt)
